# QWordle

./: CMakeLists.txt  GameOverPopup.qml  GamePage.qml  HowToPlayPopup.qml  IntroPage.qml  Key.qml  Keyboard.qml  LetterCell.qml  README.md  WordRow.qml  WordleBoard.qml  gamemodel.cpp  gamemodel.h  keyboardmodel.cpp  keyboardmodel.h  keyinputfilter.cpp  main.cpp  main.qml  qml.qrc  worddictionary.cpp  wordlegame.cpp  wordlegame.h
include/: gamemodel.h  keyinputfilter.h  worddictionary.h  wordlegame.h
qml/: GameOverPopup.qml  HowToPlayPopup.qml  IntroPage.qml  Key.qml  Keyboard.qml  LetterCell.qml  ToastPopup.qml  WordleBoard.qml  main.qml
src/: gamemodel.cpp  keyinputfilter.cpp  worddictionary.cpp  wordlegame.cpp
